Fix SVG vertical alignment

--- a/src/components/Tilegram/styles.scss
+++ b/src/components/Tilegram/styles.scss
@@ -11,10 +11,10 @@
 .svg {
   margin: auto;
   width: 100%;
-  // max-width: 1042px;
   height: auto;
   color: gray;
   fill: transparent;
+  vertical-align: bottom;
 }
 
 .country path {
